--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,15 +1,122 @@
 .header {
   font-weight: bold;
   font-size: 128px;
+  font-family: Helvetica Neue, Arial, sans-serif;
+  height: 145px;
 }
 .subHeader {
   font-style: italic;
   font-size: 48px;
+  font-family: EB Garamond, serif;
+  padding-left: 8px;
 }
 .button {
+  font-family: Helvetica Neue, Arial, sans-serif;
+  letter-spacing: 10px;
+  font-weight: bold;
   padding: 20px;
-  width: 10%;
+  width: 400px;
   border-style: solid;
   border-color: black;
   border-width: 3px;
+  margin-top: 20px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.button:hover {
+  background-color: #f2f2f2;
+  border-style: solid;
+  border-color: black;
+}
+.linkContainer {
+  width: 440px;
+}
+.rectangles {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 25px;
+  left: 0px;
+  z-index: 1;
+}
+.rectangle1 {
+  width: 50px;
+  height: 50px;
+  flex-shrink: 0;
+  background: #0ff;
+}
+.rectangle2 {
+  width: 50px;
+  height: 50px;
+  flex-shrink: 0;
+  background: #f0f;
+}
+.rectangle3 {
+  width: 50px;
+  height: 50px;
+  flex-shrink: 0;
+  background: #ff0;
+}
+.rectangle4 {
+  width: 50px;
+  height: 50px;
+  flex-shrink: 0;
+  background: #000;
+}
+.rectangle5 {
+  width: 25px;
+  height: 50px;
+  flex-shrink: 0;
+  background: white;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 0;
+}
+.buttonText {
+  text-align: center;
+}
+
+.nav {
+  /* margin-top: 20px; */
+  height: 50px;
+  font-style: italic;
+  font-size: 24px;
+  font-family: EB Garamond, serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  width: 90%;
+  background: #f2f2f2;
+  padding: 0;
+  position: relative;
+  margin-top: 55px;
+  border-width: 0;
+}
+ul {
+  display: flex;
+}
+li {
+  padding-left: 50px;
+  padding-right: 15px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+a:hover {
+  color: gray;
+}
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 3%;
+  position: fixed;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
