--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,5 +1,5 @@
-.project-list {
+.projectList {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
