--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,5 +1,8 @@
 .projectList {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 50px;
+  justify-content: center; /* centers items horizontally */
+  align-items: center;
+  margin-top: 50px;
 }
