--- a/src/styles/ProjectDetails.module.css
+++ b/src/styles/ProjectDetails.module.css
@@ -70,20 +70,187 @@ h2 {
 }
 
 h3 {
-  font-family: Helvetica Neue;
-  font-size: 20px;
+  font-family: Helvetica Neue, Arial, sans-serif;
+  font-size: 32px;
   text-transform: lowercase;
   font-weight: 700;
   line-height: normal;
+  text-align: right;
+
+  margin: 0;
 }
 
 p {
-  font-family: EB Garamond, serif;
+  font-family: Helvetica Neue, Arial, sans-serif;
   font-size: 20px;
-  margin-left: 10px;
+  font-weight: 300;
+  margin: 0;
+  flex-grow: 8;
+  flex-basis: 0%;
+  padding-top: 9px;
+}
+.title {
+  flex-grow: 2;
+  flex-basis: 0%;
+  width: 100%;
+  align-items: end;
+  text-align: right;
+}
+.spacer {
+  width: 100%;
+  flex-grow: 1;
+  flex-basis: 0%;
 }
 .divider {
-  width: 243px;
+  width: 72.7%;
+  text-align: right;
   height: 1px;
   background-color: black;
+}
+.dividerContainer {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 50px;
+}
+
+.viewLinkButton {
+  width: 100%;
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: center;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  margin-top: 20px;
+}
+.viewLinkButtonContent {
+  font-family: Helvetica Neue, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  color: #808080;
+  display: flex;
+  flex-direction: row;
+}
+.viewLinkButtonLink {
+  height: 20px;
+  margin-right: 10px;
+}
+.viewLinkButtonContent:hover {
+  color: #bdbdbd;
+}
+.about {
+  display: flex;
+  width: 100%;
+
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.desc {
+  font-family: Helvetica Neue, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0;
+  flex-grow: 8;
+  flex-basis: 0%;
+  padding-top: 9px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.desc1 {
+  display: flex;
+  flex-direction: column;
+}
+.descSub {
+  font-weight: 700;
+}
+/**
+* ----------------------------------------------
+* Demo styles
+* ----------------------------------------------
+**/
+.accordion {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.accordion__item + .accordion__item {
+}
+
+.accordion__item {
+}
+.accordionItemHeading {
+  font-family: Helvetica Neue, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.accordionTitle {
+  padding-left: 20px;
+}
+.accordion__button {
+  background-color: #f4f4f4;
+  color: #444;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  border: none;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+
+.accordion__button:hover {
+  background-color: #ddd;
+}
+
+.accordion__button:before {
+  display: flex;
+  flex-direction: row-reverse;
+
+  content: "";
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-right: 12px solid #444;
+  margin-top: 3px;
+  margin-right: 20px;
+}
+
+.accordion__button[aria-expanded="true"]::before,
+.accordion__button[aria-selected="true"]::before {
+  transform: rotate(-90deg);
+}
+
+[hidden] {
+  display: none;
+}
+
+.accordion__panel {
+  animation: fadein 0.35s ease-in;
+}
+
+/* -------------------------------------------------- */
+/* ---------------- Animation part ------------------ */
+/* -------------------------------------------------- */
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
