--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -6,3 +6,15 @@
   align-items: center;
   margin-top: 50px;
 }
+
+@media only screen and (max-width: 1100px) {
+  .projectList {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    justify-content: center; /* centers items horizontally */
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
