--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -146,7 +146,7 @@
   }
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (max-width: 800px) {
   .about {
     display: flex;
     width: 100%;
@@ -300,7 +300,7 @@
     width: 100%;
 
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 0px;
   }
   .imageContainer {
     margin-top: 10px;
