--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,14 +1,15 @@
 @media only screen and (min-width: 800px) {
   .about {
     display: flex;
-    width: 100%;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 25px;
+    width: 80%;
   }
   .imageContainer {
     margin-top: 50px;
     margin-bottom: 75px;
+    width: 100%;
   }
   .spacer {
     width: 100%;
@@ -22,15 +23,8 @@
     justify-content: center;
     margin: auto;
     margin-top: 50px;
-    width: 70%;
   }
-  .title {
-    flex-grow: 2;
-    flex-basis: 0%;
-    width: 100%;
-    align-items: end;
-    text-align: right;
-  }
+
   .divider {
     width: 72.7%;
     text-align: right;
@@ -44,7 +38,24 @@
     flex-direction: row-reverse;
   }
   .sectionContainer {
+    display: flex;
+    flex-direction: row;
     margin-bottom: 50px;
+    gap: 100px;
+    align-items: center;
+    align-content: center;
+  }
+  .title {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    font-size: 30px;
+    text-transform: lowercase;
+    font-weight: 700;
+    line-height: normal;
+    text-align: left;
+    margin: 0;
+  }
+  .titleRest {
+    font-weight: 300;
   }
   .pic {
     max-width: 100%;
@@ -55,6 +66,7 @@
     position: relative;
     margin-top: 70px;
     margin-bottom: 40px;
+    width: 70%;
     /* padding: 10%;
   padding-left: 25%;
   padding-right: 25%; */
@@ -110,11 +122,11 @@
   .contactTextContainer {
     background-color: #f8f8f8;
     padding: 100px;
-    width: 500px;
+    width: 83%;
     display: flex;
     flex-direction: column;
     left: 20%;
-    top: 30%;
+    top: 20%;
   }
   .contactText {
     text-align: center;
@@ -143,6 +155,54 @@
   .button1:hover:before {
     content: "KYUHO@UPENN.EDU";
     color: black;
+  }
+  .dividerThick {
+    width: 100%;
+    background-color: #f8f8f8;
+    padding: 30px;
+    font-size: 24px;
+    font-weight: 700;
+    color: #525252;
+  }
+  .moreInfo {
+    width: 100%;
+    font-size: 25px;
+    font-weight: 300;
+    display: flex;
+    flex-direction: row;
+    padding-top: 45px;
+    justify-content: space-between;
+    gap: 50px;
+    padding-bottom: 45px;
+  }
+  .moreInfoText {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    flex-grow: 1;
+    width: 50%;
+  }
+  .link {
+    font-weight: 700;
+    text-decoration: underline;
+  }
+  .vertImageSpace {
+    flex-grow: 1;
+    background-color: #f8f8f8;
+    width: 50%;
+    overflow: hidden;
+    position: relative; /* Add this line */
+  }
+
+  .vertImageSpaceImage {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
