--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -56,7 +56,7 @@
   .projectContainer {
     background-color: #f8f8f8;
     position: relative;
-    height: 450px;
+    height: 425px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +68,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding: 20px;
+    padding: 25px;
+    padding-top: 15px;
+    padding-bottom: 20px;
     position: absolute;
     bottom: 0;
     right: 0;
