--- a/src/styles/Image.module.css
+++ b/src/styles/Image.module.css
@@ -23,6 +23,14 @@
     height: 100%;
     z-index: -1;
   }
+  .rectangleContainer2 {
+    display: inline-block;
+    position: relative;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 100%;
+  }
 }
 @media only screen and (min-width: 500px) {
   .pic {
@@ -48,6 +56,15 @@
     height: 100%;
     z-index: -1;
   }
+
+  .rectangleContainer2 {
+    display: inline-block;
+    position: relative;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    width: 100%;
+    height: 100%;
+  }
 }
 @media only screen and (min-width: 1000px) {
   .pic {
@@ -72,5 +89,14 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+  }
+
+  .rectangleContainer2 {
+    display: inline-block;
+    position: relative;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    width: 100%;
+    height: 100%;
   }
 }
