--- a/src/styles/ProjectDetails.module.css
+++ b/src/styles/ProjectDetails.module.css
@@ -35,7 +35,7 @@
   }
 
   h2 {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 30px;
     text-transform: lowercase;
     font-weight: 700;
@@ -284,7 +284,7 @@
   }
 
   h2 {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 36px;
     text-transform: lowercase;
     font-weight: 700;
@@ -532,7 +532,7 @@
   }
 
   h2 {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 48px;
     text-transform: lowercase;
     font-weight: 700;
